[package]
name = "danmu_magic"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
xml-rs = "0.8.20"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"